Https, basic auth support
